# control-system

./: .gitignore  README.md
control-system/: Cargo.toml
control-system/.cargo/: config.toml
control-system/releases/rpi3-armv7/: SHA256SUMS.txt
control-system/src/: main.rs
control-system/src/app/: actions.rs  events.rs  logs.rs  mod.rs  state.rs
control-system/src/config/: load.rs  mod.rs
control-system/src/github/: cache.rs  client.rs  mod.rs  models.rs  poller.rs
control-system/src/news/: feed.rs  mod.rs
control-system/src/spotify/: auth.rs  client.rs  mod.rs  poller.rs  state.rs
control-system/src/system/: mod.rs  stats.rs
control-system/src/ui/: layout.rs  mod.rs
control-system/src/ui/fx/: mod.rs  pulses.rs  transitions.rs
control-system/src/ui/widgets/: activity_feed.rs  clock.rs  github_overview.rs  help_overlay.rs  log_viewer.rs  mod.rs  news_feed.rs  repo_spotlight.rs  spotify_player.rs  status_bar.rs  system_stats.rs
control-system/src/util/: format.rs  mod.rs  time.rs
