[package]
name = "control-system"
version = "0.1.0"
edition = "2021"
description = "A TUI desk control dashboard for Raspberry Pi touchscreen"
authors = ["control-system"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Animations
tachyonfx = "0.9"

# GitHub API
octocrab = "0.41"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.32"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
dirs = "5"
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
