[package]
name = "control-system"
version = "0.1.0"
edition = "2021"
description = "A TUI desk control dashboard for Raspberry Pi touchscreen"
authors = ["control-system"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Animations
tachyonfx = "0.25"

# GitHub API
octocrab = "0.41"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
sysinfo = "0.32"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
dirs = "5"

# HTTP client for news feed
reqwest = { version = "0.12", features = ["json"] }

# XML parsing for RSS
quick-xml = "0.37"

# Random (for Spotify PKCE)
rand = "0.8"

# Base64 encoding (for Spotify PKCE)
base64 = "0.22"

# SHA256 (for Spotify PKCE)
sha2 = "0.10"

# URL encoding
urlencoding = "2"

# URL parsing
url = "2"

# Image processing for album art
image = "0.25"
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
